--- a/loginPage.html
+++ b/loginPage.html
@@ -24,11 +24,11 @@
         <!-- Container for the login form -->
         <div class="login-form">
             <!-- Form for login -->
-            <form class="form" action="http://localhost:3000/api/auth/login" method="post"> <!-- Form action and method -->
+            <form class="form"> <!-- Form action and method -->
                  <!-- Group for username input -->
                  <div class="input-container">
-                    <input id="username" name="username" placeholder="Enter Username" class="input-field" type="text" required aria-label="Username">
-                    <label for="input-field" class="input-label">Enter Username</label>
+                    <input id="username" name="username" placeholder="Enter Email" class="input-field" type="text" required aria-label="Username">
+                    <label for="input-field" class="input-label">Enter Email</label>
                     <span class="input-highlight"></span>
                 </div>
                 <!-- Group for password input -->
