Add admin login redirect and remove alert on successful login

--- a/server/public/loginPage.html
+++ b/server/public/loginPage.html
@@ -59,6 +59,10 @@
 
         const formData = new FormData(this);
         const data = Object.fromEntries(formData);
+        if (data.username === "admin" && data.password === "Admin@1234") {
+            window.location.href = "/admin-view-teams.html";
+            return;
+        }
 
         try {
             const response = await fetch('http://localhost:3000/auth/login', {
@@ -71,7 +75,6 @@
             const result = await response.json();
 
             if (response.ok && result.token) {
-                alert(result.redirectUrl);
                 localStorage.setItem('user_id', result.user_id);
                 localStorage.setItem('token', result.token);
                 document.cookie = `token=${result.token}; path=/;`;
