Update student homepage link and invoke team status check after team creation

--- a/server/public/student-homepage.html
+++ b/server/public/student-homepage.html
@@ -35,7 +35,7 @@
     <div class="position-sticky pt-3">
       <ul class="nav flex-column">
         <li class="nav-item">
-          <a class="nav-link active" href="#">
+          <a class="nav-link active" href="student-homepage.html">
             Home
           </a>
         </li>
