Update application URLs to point to the new production server

--- a/server/public/createAccountPage.html
+++ b/server/public/createAccountPage.html
@@ -105,7 +105,7 @@
 //     const data = Object.fromEntries(formData);
 
 //     try {
-//         const response = await fetch('http://ec2-54-90-250-174.compute-1.amazonaws.com:80/auth/create-account', {
+//         const response = await fetch('http://ec2-54-234-57-121.compute-1.amazonaws.com//auth/create-account', {
 //             method: 'POST',
 //             headers: { 'Content-Type': 'application/json' },
 //             body: JSON.stringify(data),
