--- a/server/public/student from a team page.html
+++ b/server/public/student from a team page.html
@@ -157,7 +157,7 @@
 
 
                     try {
-                    const response = await fetch('http://ec2-54-90-250-174.compute-1.amazonaws.com:80/teamScheme/add', {
+                    const response = await fetch('http://ec2-54-234-57-121.compute-1.amazonaws.com//teamScheme/add', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify({ 
