Update application to use port 80 for API requests and documentation

--- a/server/public/add-team.html
+++ b/server/public/add-team.html
@@ -187,7 +187,7 @@
             const description = document.getElementById('teamDescription').value;
 
             try {
-                const response = await fetch('http://ec2-54-234-57-121.compute-1.amazonaws.com//team/moderator/add', {
+                const response = await fetch('http://ec2-54-234-57-121.compute-1.amazonaws.com:80/team/moderator/add', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
