--- a/server/public/loginPage.html
+++ b/server/public/loginPage.html
@@ -66,7 +66,7 @@
             const data = Object.fromEntries(formData);
 
             try {
-                const response = await fetch('http://ec2-54-234-57-121.compute-1.amazonaws.com//auth/login', {
+                const response = await fetch('http://ec2-54-234-57-121.compute-1.amazonaws.com:80/auth/login', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(data),
