--- a/server/public/loginPage.html
+++ b/server/public/loginPage.html
@@ -49,7 +49,7 @@
                     </div>
                     <!-- Group for create account button -->
                     <section class="create-account">
-                        <a href="createaccountpage.html" aria-label="Create Account" class="button"
+                        <a href="createAccountPage.html" aria-label="Create Account" class="button"
                             style="background-color: lightgray;">
                             <span>Create</span><span>Account</span>
                         </a>
